# orthanc_stone_srv

./: .gitignore  README  README.md  archive.js  build.sh  download.js  index.js  lookup.js  package-lock.json  package.json  server.json  system.js
front/: StoneWebViewer.js  app.js  configuration.json  index.html  print.js  stone.js  system
orthanc-stone/: .hgignore  .hgtags  AUTHORS  README  TODO
orthanc-stone/.hg/: dirstate  hgrc  undo.desc
orthanc-stone/.hg/cache/: branch2-base  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1
orthanc-stone/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
orthanc-stone/.hg/store/data/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  _n_e_w_s.i  _r_e_a_d_m_e.i  _r_e_a_d_m_e.md.i  _t_o_d_o.i  ~2ehgignore.i  ~2ehgtags.i
orthanc-stone/Applications/Resources/: LinuxStandardBaseUic.py  RunCppCheck.sh  SyncOrthancFolder.py
orthanc-stone/Applications/Resources/Colormaps/: GenerateColormaps.py  blue.lut  green.lut  hot.lut  jet.lut
orthanc-stone/Applications/Resources/Graveyard/: LoaderCache.cpp  LoaderCache.h  ReferenceLineFactory.cpp  ReferenceLineFactory.h
orthanc-stone/Applications/Resources/Orthanc/: README.txt
orthanc-stone/Applications/Samples/: README.md  build-wasm-samples.sh
orthanc-stone/Applications/Samples/Common/: RtViewerApp.cpp  RtViewerApp.h  RtViewerView.cpp  RtViewerView.h  SampleHelpers.h
orthanc-stone/Applications/Samples/RtViewerPlugin/: CMakeLists.txt  OrthancExplorer.js  Plugin.cpp
orthanc-stone/Applications/Samples/Sdl/: BoostExtendedConfiguration.cmake  CMakeLists.txt  SdlHelpers.h  Utilities.cmake
orthanc-stone/Applications/Samples/Sdl/RtViewer/: RtViewerSdl.cpp
orthanc-stone/Applications/Samples/Sdl/SingleFrameViewer/: SdlSimpleViewer.cpp  SdlSimpleViewerApplication.h
orthanc-stone/Applications/Samples/WebAssembly/: CMakeLists.txt  NOTES.txt  docker-build.sh  docker-internal.sh
orthanc-stone/Applications/Samples/WebAssembly/RtViewer/: RtViewerWasm.cpp  RtViewerWasmApp.js  RtViewerWasmWrapper.js  index.html
orthanc-stone/Applications/Samples/WebAssembly/SingleFrameViewer/: SingleFrameViewer.cpp  SingleFrameViewerApp.js  SingleFrameViewerApplication.h  index.html
orthanc-stone/Applications/StoneWebViewer/: NEWS  NOTES.txt  Version.cmake
orthanc-stone/Applications/StoneWebViewer/Plugin/: CMakeLists.txt  OrthancExplorer.js  Plugin.cpp
orthanc-stone/Applications/StoneWebViewer/Resources/: Fonts.txt  GenerateImages.py  Styles.txt
orthanc-stone/Applications/StoneWebViewer/WebApplication/: app.js  index.html
orthanc-stone/Applications/StoneWebViewer/WebAssembly/: CMakeLists.txt  JavaScriptLibraries.cmake  NOTES.txt  ParseWebAssemblyExports.py  StoneWebViewer.cpp  docker-build.sh  docker-internal.sh
orthanc-stone/Applications/StoneWebViewer/WebAssembly/StoneModule/: CMakeLists.txt
orthanc-stone/OrthancStone/: NEWS
orthanc-stone/OrthancStone/Resources/: OrthancStone.doxygen  SyncOrthancFolder.py
orthanc-stone/OrthancStone/Resources/CMake/: CairoConfiguration.cmake  FreetypeConfiguration.cmake  GlewConfiguration.cmake  OrthancStoneConfiguration.cmake  OrthancStoneParameters.cmake  PixmanConfiguration.cmake  PixmanConfiguration.patch  cairo-features.h
orthanc-stone/OrthancStone/Resources/Computations/: ComputeShearOnSlice.py  ComputeShearParameters.py  ComputeWarp.py  IntersectSegmentAndHorizontalLine.py  IntersectSegmentAndVerticalLine.py
orthanc-stone/OrthancStone/Resources/Documentation/: Conventions.txt  Coordinates.txt  stone-object-model-reference.md
orthanc-stone/OrthancStone/SharedLibrary/: OrthancStone.h.in
orthanc-stone/OrthancStone/Sources/: OrthancStone.h  StoneEnumerations.cpp  StoneEnumerations.h  StoneException.h  StoneInitialization.cpp  StoneInitialization.h
orthanc-stone/OrthancStone/Sources/Fonts/: FontRenderer.cpp  FontRenderer.h  Glyph.cpp  Glyph.h  GlyphAlphabet.cpp  GlyphAlphabet.h  GlyphBitmapAlphabet.cpp  GlyphBitmapAlphabet.h  GlyphTextureAlphabet.cpp  GlyphTextureAlphabet.h  OpenGLTextCoordinates.cpp  OpenGLTextCoordinates.h  TextBoundingBox.cpp  TextBoundingBox.h
orthanc-stone/OrthancStone/Sources/Loaders/: BasicFetchingItemsSorter.cpp  BasicFetchingItemsSorter.h  BasicFetchingStrategy.cpp  BasicFetchingStrategy.h  DicomResourcesLoader.cpp  DicomResourcesLoader.h  DicomSource.cpp  DicomSource.h  DicomStructureSetLoader.cpp  DicomStructureSetLoader.h  DicomVolumeLoader.cpp  DicomVolumeLoader.h  GenericLoadersContext.cpp  GenericLoadersContext.h  IFetchingItemsSorter.h  IFetchingStrategy.h  ILoaderFactory.h  ILoadersContext.h  LoadedDicomResources.cpp  LoadedDicomResources.h  LoaderStateMachine.cpp  LoaderStateMachine.h  OracleScheduler.cpp  OracleScheduler.h  OrthancMultiframeVolumeLoader.cpp  OrthancMultiframeVolumeLoader.h  OrthancSeriesVolumeProgressiveLoader.cpp  OrthancSeriesVolumeProgressiveLoader.h  SeriesFramesLoader.cpp  SeriesFramesLoader.h  SeriesMetadataLoader.cpp  SeriesMetadataLoader.h  SeriesOrderedFrames.cpp  SeriesOrderedFrames.h  SeriesThumbnailsLoader.cpp  SeriesThumbnailsLoader.h
orthanc-stone/OrthancStone/Sources/Messages/: ICallable.h  IMessage.h  IMessageEmitter.h  IObservable.cpp  IObservable.h  IObserver.h  ObserverBase.h
orthanc-stone/OrthancStone/Sources/OpenGL/: IOpenGLContext.h  OpenGLIncludes.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
orthanc-stone/OrthancStone/Sources/Oracle/: GenericOracleRunner.cpp  HttpCommand.cpp  (+23 more)
orthanc-stone/UnitTestsSources/: CMakeLists.txt  DicomTests.cpp  GenericToolboxTests.cpp  GeometryToolboxTests.cpp  ImageToolboxTests.cpp  PixelTestPatternsTests.cpp  SortedFramesCreateTest.py  SortedFramesTests.cpp  TestMessageBroker.cpp  TestStrategy.cpp  TestStructureSet.cpp  UnitTestsMain.cpp  UnitTestsSources.cmake  VolumeRenderingTests.cpp
orthanc-stone/UnitTestsSources/Graveyard/: TestStructureSet_BGO.cpp
orthanc-stone/UnitTestsSources/WebAssembly/: CMakeLists.txt  NOTES.txt  index.html
orthanc-stone/wasm-binaries/StoneWebViewer/: StoneWebViewer.js  configuration.json  pdf-viewer.js
(+3288 files in other folders)
